--- a/web/app/themes/hpmv4/stylesheet.css
+++ b/web/app/themes/hpmv4/stylesheet.css
@@ -3011,6 +3011,15 @@ article .entry-header p.staff-pronouns,
 	margin: 0.5rem 0 1rem;
 	grid-template-columns: repeat(5, 2rem);
 }
+:is(.single-staff,.sa-info,#author-wrap) .icon-wrap .service-icon {
+	--unit: 2rem;
+}
+.staff-bio {
+	margin-top: 2rem;
+}
+.staff-bio > * + * {
+	margin-top: 1rem;
+}
 @media screen and (min-width: 34em) {
 	.column-left,
 	.column-span,
